added github pages module

--- a/angular.json
+++ b/angular.json
@@ -168,6 +168,9 @@
               "browserTarget": "app:build:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
