--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@types/node": "^12.11.1",
         "@typescript-eslint/eslint-plugin": "5.3.0",
         "@typescript-eslint/parser": "5.3.0",
+        "angular-cli-ghpages": "^1.0.5",
         "cordova-plugin-device": "2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.0.5",
         "cordova-plugin-ionic-webview": "^5.0.0",
